Revert "use stream's toList() method"
This reverts commit e8b521cf0a006f82470ff0297c5f4885d70fd4c1.