@@ -2,6 +2,7 @@ package coach.xfitness.business;
 
 import java.util.Collection;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 import javax.persistence.Basic;
 import javax.persistence.Column;
@@ -228,7 +229,7 @@ public class Exercise {
                 .stream()
                 .filter(em -> em.getIsSecondary() == isSecondaryInt)
                 .map(ExerciseMuscle::getMuscleByMuscleId)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public Collection<Muscle> getPrimaryMuscles() {
@@ -240,11 +241,11 @@ public class Exercise {
     }
 
     public Collection<String> getStepsList() {
-        return steps.lines().toList();
+        return steps.lines().collect(Collectors.toList());
     }
 
     public Collection<String> getTipsList() {
-        return tips.lines().toList();
+        return tips.lines().collect(Collectors.toList());
     }
 
 }
